<resources>
    <string name="app_name">Perfect Day</string>
    <string name="app_string">com.example.perfectday</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="choose_category">Choose a category: </string>
    <string name="add_habit">Add a habit</string>
    <string name="remind_me">REMIND ME AT</string>
    <string name="habit_added">Habit added</string>

    <string name="error_noday">Oops, please select at least 1 day</string>
    <string name="error_nohabit">Hey, you forgot to write what the habit is!</string>
    <string name="error_snooze">Snooze by fewer hours for today, or select Tomorrow</string>
    <string name="error2_snooze">Seriously? Stop fooling around! Snooze by atleast an hour</string>

    <string name="habit_done">Sure you want to mark this as done?</string>

    <!--  Category dropdown choices -->
    <string-array name="categories">
        <item>Music</item>
        <item>Food</item>
        <item>Literature</item>
        <item>Travel/Adventure</item>
        <item>Tech</item>
        <item>Fitness</item>
        <item>Career</item>
        <item>Personal</item>
        <item>Lifestyle</item>
        <item>Other</item>
    </string-array>

    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>

</resources>
